--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,21 @@
 {
   "version": 2,
-  "name": "stxavier-erp",
   "framework": null,
   "buildCommand": "npm run build:web",
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "devCommand": "npm run dev",
   "env": {
-    "EXPO_PUBLIC_FIREBASE_API_KEY": "@firebase_api_key",
-    "EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN": "@firebase_auth_domain",
-    "EXPO_PUBLIC_FIREBASE_PROJECT_ID": "@firebase_project_id",
-    "EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET": "@firebase_storage_bucket",
-    "EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "@firebase_messaging_sender_id",
-    "EXPO_PUBLIC_FIREBASE_APP_ID": "@firebase_app_id",
+    "EXPO_PUBLIC_FIREBASE_API_KEY": "AIzaSyAXUmn2ZHX3s_ZqaxDwqGYxiDmKJUj-AY8",
+    "EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN": "stxavier-erp.firebaseapp.com",
+    "EXPO_PUBLIC_FIREBASE_PROJECT_ID": "stxavier-erp",
+    "EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET": "stxavier-erp.appspot.com",
+    "EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "588752936214",
+    "EXPO_PUBLIC_FIREBASE_APP_ID": "1:588752936214:web:99389d56ca0f9395d40437",
     "EXPO_PUBLIC_ENVIRONMENT": "production",
     "EXPO_PUBLIC_DEBUG_MODE": "false"
   },
   "regions": ["sin1"],
-  "functions": {
-    "app/**": {
-      "runtime": "nodejs18.x"
-    }
-  },
   "headers": [
     {
       "source": "/(.*)",
