Mobile Apps Ready - iOS & Android Builds Complete

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "web": "expo start --web",
     "build:web": "expo export --platform web",
     "build:all": "expo export --platform all",
+    "build:mobile": "expo export --platform android,ios",
+    "build:ios": "expo export --platform ios",
+    "build:android": "expo export --platform android",
     "dev": "expo start --web",
     "dev:global": "expo start --web --tunnel",
     "dev:enhanced": "node scripts/enhanced-start.js",
