feat: Add comprehensive navigation drawer system and enhancements
- Added DrawerNavigator.tsx with role-based navigation panel
- Enhanced AppNavigator.tsx to use drawer navigation
- Installed navigation packages: @react-navigation/drawer, react-native-gesture-handler, react-native-reanimated
- Fixed navigation panel visibility issue
- Added custom drawer content with user profile and role-based menu items
- Improved UX with hamburger menu and swipe gestures
- Added enhanced dashboard components for better user experience
- Implemented notification and analytics services
- Added deployment configurations and Docker support
- Cleaned up obsolete documentation files

Navigation Features:
- Role-based menu items (Admin/Faculty/Student)
- User profile section in drawer
- Smooth animations and gestures
- Direct sign-out from navigation panel
- Improved screen organization and accessibility

--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "dev:iphone": "expo start --tunnel",
     "dev:global": "expo start --web --tunnel",
     "dev:monitor": "npm run dev & npm run monitor:performance",
-    "deploy": "npm run build:web && vercel --prod",
-    "deploy:preview": "npm run build:web && vercel",
+    "deploy": "npm run build:web && npx vercel --prod",
+    "deploy:preview": "npm run build:web && npx vercel",
+    "deploy:vercel": "npm run build:web && npx vercel --prod",
+    "deploy:netlify": "npm run build:web && npx netlify deploy --prod --dir=dist",
+    "deploy:railway": "railway up",
+    "deploy:docker": "docker build -t stxavier-erp . && docker run -d -p 3000:3000 stxavier-erp",
+    "deploy:auto": "npm run deploy:vercel",
     "health-check": "node scripts/check-ci-cd.ps1",
     "setup": "echo 'Run: npm ci && npm start'",
     "test:network": "expo start --tunnel",
@@ -50,31 +55,33 @@
     "prebuild:clean": "expo prebuild --clean"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~5.0.4",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
-    "expo": "~53.0.22",
-    "expo-status-bar": "~2.2.3",
+    "expo": "^54.0.7",
+    "expo-status-bar": "~3.0.8",
     "firebase": "^12.2.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "^0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-drawer-layout": "^4.1.13",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-web": "^0.20.0"
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "babel-plugin-module-resolver": "^5.0.2",
-    "bundlesize": "^0.18.2",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
