feat: Add always-active mobile app deployment configuration
 Mobile App Store Deployment Ready:
- EAS Build configuration for iOS/Android app stores
- Background services for always-active functionality
- Push notifications and background sync capabilities
- Automated deployment scripts for both platforms
- App store submission configuration

 Always-Active Features:
- BackgroundService.ts for background tasks and data sync
- AppStatusService.ts for monitoring app health
- Push notification system for real-time updates
- Background fetch every 15 minutes
- Offline data caching and sync

 Deployment Tools:
- deploy-mobile.ps1 (PowerShell) for Windows
- deploy-mobile.sh (Bash) for Linux/Mac
- setup-mobile.ps1 for quick configuration
- Comprehensive MOBILE-DEPLOYMENT.md guide

 Configuration Updates:
- app.json configured for mobile app stores
- eas.json for build and submission workflows
- iOS/Android bundle identifiers and permissions
- Background modes and notification setup

 Ready for App Store Deployment:
- iOS App Store (Apple)
- Google Play Store (Android)
- EAS Cloud Build service
- Always active on mobile devices even when laptop is off

--- a/app.json
+++ b/app.json
@@ -13,7 +13,11 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.stxavier.erp"
+      "bundleIdentifier": "com.stxavier.erp",
+      "buildNumber": "1",
+      "infoPlist": {
+        "UIBackgroundModes": ["background-fetch", "background-processing"]
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -21,7 +25,14 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.stxavier.erp"
+      "package": "com.stxavier.erp",
+      "versionCode": 1,
+      "permissions": [
+        "android.permission.INTERNET",
+        "android.permission.ACCESS_NETWORK_STATE",
+        "android.permission.WAKE_LOCK",
+        "android.permission.RECEIVE_BOOT_COMPLETED"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png",
@@ -29,7 +40,34 @@
     },
     "scheme": "stxavier-erp",
     "platforms": ["ios", "android", "web"],
-    "description": "Complete Educational ERP System for St. Xavier College",
-    "githubUrl": "https://github.com/kelvinkbk/stxavier-erp"
+    "description": "Complete Educational ERP System for St. Xavier College - Always active mobile app",
+    "githubUrl": "https://github.com/kelvinkbk/stxavier-erp",
+    "updates": {
+      "enabled": true,
+      "checkAutomatically": "ON_LOAD",
+      "fallbackToCacheTimeout": 30000
+    },
+    "plugins": [
+      "expo-notifications",
+      "expo-background-fetch",
+      "expo-task-manager",
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "enableProguardInReleaseBuilds": true,
+            "enableShrinkResourcesInReleaseBuilds": true
+          },
+          "ios": {
+            "deploymentTarget": "15.1"
+          }
+        }
+      ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "your-eas-project-id"
+      }
+    }
   }
 }
