--- a/package.json
+++ b/package.json
@@ -75,7 +75,11 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "expo-notifications": "~0.32.11",
+    "expo-background-fetch": "~14.0.7",
+    "expo-task-manager": "~14.0.7",
+    "expo-build-properties": "~1.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
