--- a/package.json
+++ b/package.json
@@ -63,7 +63,14 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "expo": "^54.0.7",
+    "expo-application": "^7.0.7",
+    "expo-background-fetch": "~14.0.7",
+    "expo-build-properties": "~1.0.8",
+    "expo-device": "^8.0.7",
+    "expo-network": "^8.0.7",
+    "expo-notifications": "^0.32.11",
     "expo-status-bar": "~3.0.8",
+    "expo-task-manager": "~14.0.7",
     "firebase": "^12.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -75,11 +82,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1",
-    "expo-notifications": "~0.32.11",
-    "expo-background-fetch": "~14.0.7",
-    "expo-task-manager": "~14.0.7",
-    "expo-build-properties": "~1.0.8"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
